--- a/telegram-words-cloud-bot/Dockerfile
+++ b/telegram-words-cloud-bot/Dockerfile
@@ -16,7 +16,7 @@ WORKDIR /app
 COPY . /app
 
 # Creates a non-root user and adds permission to access the /app folder
-RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app && chown -R appuser /app/data && chown -R appuser /app/output
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
