--- a/telegram-words-cloud-bot/Dockerfile
+++ b/telegram-words-cloud-bot/Dockerfile
@@ -18,6 +18,9 @@ COPY . /app
 # Creates a non-root user and adds permission to access the /app folder
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
+RUN chown -R 1000:1000 /app
+RUN chown -R 1000:1000 ./data
+RUN chown -R 1000:1000 ./output
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
 CMD ["python", "src/main.py"]
