--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./data/:/app/data/
       - ./output/:/app/output/
+      - ./stopwords/:/app/stopwords/
     env_file:
       - .env
 
